--- a/Halaman1.html
+++ b/Halaman1.html
@@ -82,7 +82,7 @@
     </audio>
 
     <!-- Tombol WhatsApp -->
-    <button id="whatsapp-button" onclick="window.location.href='https://wa.me/6283101799665?text=Terimakasih%20min'">Kirim pesan buat Lucy!</button>
+    <button id="whatsapp-button" onclick="window.location.href='https://wa.me/6283101799665?text=*Pesan Rahasia* > Sebenarnya aku itu kangen banget, cuman aku ga tau cara nyampeinnya gimana karena aku orangnya gengsian sedikit, sejujurnya aku mau kita selamanya bersama, pengen kaya dulu lagi seru sedikit jelous karena kamu suka asik sama temen cewe kamu yang bisa bikin kamu ketawa sedangkan aku yang suka diam kalo kamu ketawa hehe😁'">Kirim pesan buat Lucy!</button>
     <script>
         const texts = [
     "Ciee yang hari ini ultah...",
@@ -97,7 +97,7 @@
 
 let index = 0;
 const typingElement = document.getElementById('typing');
-const typingSpeed = 0; // Kecepatan mengetik
+const typingSpeed = 50; // Kecepatan mengetik
 const whatsappButton = document.getElementById('whatsapp-button'); // Tombol WhatsApp
 
 function typeText() {
